...
                    android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                    android:text="NAME"
                    android:textColor="@color/get_bike_black"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/profileUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border_style"
                    android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                    android:maxLines="1"
                    android:minHeight="40dp"
...
                    android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                    android:text="EMAIL*"
                    android:textColor="@color/get_bike_black"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border_style"
                    android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                    android:maxLines="1"
                    android:minHeight="40dp"
...
                    android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                    android:text="OCOUPATION"
                    android:textColor="@color/get_bike_black"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/userOccupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border_style"
                    android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                    android:maxLines="1"
                    android:minHeight="40dp"
...
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:text="CITY"
                        android:textColor="@color/get_bike_black"
                        android:textSize="@dimen/text_size_small" />

                    <EditText
                        android:id="@+id/userCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_border_style"
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:maxLines="1"
                        android:minHeight="40dp"
...
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:text="YEAR OF BIRTH"
                        android:textColor="@color/get_bike_black"
                        android:textSize="@dimen/text_size_small" />

                    <EditText
                        android:id="@+id/userYearOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_border_style"
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:inputType="number"
                        android:maxLines="1"
...
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:text="HOME LOCATION"
                        android:textColor="@color/get_bike_black"
                        android:textSize="@dimen/text_size_small" />

                    <EditText
                        android:id="@+id/userHomeLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_border_style"
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:maxLines="1"
                        android:minHeight="40dp"
...
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:text="OFFICE LOCATION"
                        android:textColor="@color/get_bike_black"
                        android:textSize="@dimen/text_size_small" />

                    <EditText
                        android:id="@+id/userOfficeLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_border_style"
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:maxLines="1"
                        android:minHeight="40dp"
...
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:text="MOBILE*"
                        android:textColor="@color/get_bike_black"
                        android:textSize="@dimen/text_size_small" />

                    <EditText
                        android:id="@+id/userMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_border_style"
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:inputType="number"
                        android:maxLines="1"
...
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="Verified" />
            </LinearLayout>

            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/black_button_style"
                android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
...
