...
                    android:text="Profile And Settings"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_intermediate" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/personalDetails"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
...
